--- a/RxApp.Android.Support.v7.AppCompat/RxApp.Android.Support.v7.AppCompat.nuspec
+++ b/RxApp.Android.Support.v7.AppCompat/RxApp.Android.Support.v7.AppCompat.nuspec
@@ -16,7 +16,7 @@
       <dependency id="RxApp.Android" version="0.0.1-pre1" />
       <dependency id="Rx-Main" version="2.2.5" />
       <dependency id="System.Collections.Immutable" version="1.1.34-rc" />
-      <dependency id="Xamarin.Android.Support.v7" version="22.0.0" />
+      <dependency id="Xamarin.Android.Support.v7.AppCompat" version="22.0.0" />
     </dependencies>
   </metadata>
   <files>
