--- a/RxApp.XamarinForms/RxApp.XamarinForms-Android.csproj
+++ b/RxApp.XamarinForms/RxApp.XamarinForms-Android.csproj
@@ -39,12 +39,13 @@
   </PropertyGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Application.cs" />
     <Compile Include="Observable.cs" />
     <Compile Include="Scheduler-Android.cs" />
     <Compile Include="Page.cs" />
     <Compile Include="Bindings.cs" />
     <Compile Include="RxFormsApplicationActivity.cs" />
+    <Compile Include="PageCreatorBuilder.cs" />
+    <Compile Include="RxFormsApplication.cs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="System" />
