--- a/RxApp.XamarinForms/RxApp.XamarinForms-iOS.csproj
+++ b/RxApp.XamarinForms/RxApp.XamarinForms-iOS.csproj
@@ -32,11 +32,12 @@
   </PropertyGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Application.cs" />
     <Compile Include="Observable.cs" />
     <Compile Include="Scheduler-iOS.cs" />
     <Compile Include="Bindings.cs" />
     <Compile Include="Page.cs" />
+    <Compile Include="PageCreatorBuilder.cs" />
+    <Compile Include="RxFormsApplication.cs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="System" />
