--- a/RxApp.XamarinForms/RxApp.XamarinForms.csproj
+++ b/RxApp.XamarinForms/RxApp.XamarinForms.csproj
@@ -33,11 +33,12 @@
   </PropertyGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Application.cs" />
     <Compile Include="Scheduler.cs" />
     <Compile Include="Observable.cs" />
     <Compile Include="Page.cs" />
     <Compile Include="Bindings.cs" />
+    <Compile Include="PageCreatorBuilder.cs" />
+    <Compile Include="RxFormsApplication.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath32)\Microsoft\Portable\$(TargetFrameworkVersion)\Microsoft.Portable.CSharp.targets" />
   <Import Project="..\packages\Xamarin.Forms.1.3.1.6296\build\portable-win+net45+wp80+MonoAndroid10+MonoTouch10+Xamarin.iOS10\Xamarin.Forms.targets" Condition="Exists('..\packages\Xamarin.Forms.1.3.1.6296\build\portable-win+net45+wp80+MonoAndroid10+MonoTouch10+Xamarin.iOS10\Xamarin.Forms.targets')" />
