--- a/RxApp.Android.Support.v4/RxApp.Android.Support.v4.nuspec
+++ b/RxApp.Android.Support.v4/RxApp.Android.Support.v4.nuspec
@@ -2,7 +2,7 @@
 <package >
   <metadata>
     <id>RxApp.Android.Support.v4</id>
-    <version>0.0.1-pre2</version>
+    <version>0.0.1-pre3</version>
     <title>RxApp.Android.Support.v4</title>
     <authors>David Bordoley</authors>
     <licenseUrl>https://github.com/bordoley/RxApp/blob/master/LICENSE</licenseUrl>
@@ -12,15 +12,15 @@
     <description>RxApp view bindings and navigation support for the Android Support library v4.</description>
     <tags>portable mvvm pcl rx reactive LINQ</tags>
     <dependencies>
-      <dependency id="RxApp" version="0.0.1-pre2" />
-      <dependency id="RxApp.Android" version="0.0.1-pre2" />
+      <dependency id="RxApp" version="0.0.1-pre3" />
+      <dependency id="RxApp.Android" version="0.0.1-pre3" />
       <dependency id="Rx-Main" version="2.2.5" />
       <dependency id="System.Collections.Immutable" version="1.1.34-rc" />
       <dependency id="Xamarin.Android.Support.v4" version="22.0.0" />
     </dependencies>
   </metadata>
   <files>
-  	<file src="bin\Release\RxApp.Android.Support.v4.dll" target="lib\MonoAndroid" />
-  	<file src="bin\Release\RxApp.Android.Support.v4.xml" target="lib\MonoAndroid" />
+  	<file src="bin/Release/RxApp.Android.Support.v4.dll" target="lib/MonoAndroid" />
+  	<file src="bin/Release/RxApp.Android.Support.v4.xml" target="lib/MonoAndroid" />
   </files>
 </package>
